# ege-palantir

./: .env.example  .pre-commit-config.yaml  Dockerfile.palantir  README.md  README.palantir.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
palantir/: README.md  pyproject.toml
palantir/tests/: test_smoke.py
scripts/palantir/: disable-upstream-ci.sh
ui-v2/: package-lock.json  package.json
ui-v2/src/palantir/: nav-extension.tsx
ui-v2/src/palantir/components/: EmptyState.tsx  PalantirHeader.tsx  RunStatusBadge.tsx
ui-v2/src/palantir/routes/: DataQuality.tsx  IngestHistory.tsx  Overview.tsx
