[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palantir"
version = "0.0.0"
description = "EGE Palantír — ETL flows and connectors that run on top of Prefect."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "Apache-2.0" }
authors = [{ name = "EGE Products" }]

dependencies = [
    "prefect>=3.7,<4",
    "supabase>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyarrow>=15",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff==0.15.12",
    "mypy==1.19.1",
    "types-openpyxl",
]

[tool.hatch.build.targets.wheel]
packages = ["src/palantir"]

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "I"]
"tests/conftest.py" = ["F405", "E402", "F403"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
files = ["src/palantir", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
